fixed stretching of sidebar

--- a/style.css
+++ b/style.css
@@ -122,21 +122,19 @@ input[type="text"]:focus {
 /*page layout*/
 
 main {
+  min-height: 100vh;
   display: flex;
-
   justify-content: stretch;
+  align-items: stretch;
 }
 
 section {
   padding: 2.5% 5%;
-  width: 75%;
+  flex: 1 0 75%;
 }
 
 aside {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 25%;
+  flex: 1 1 auto;
   background-color: var(--accent);
   box-shadow: -1px 0 5px 5px #141414;
 }
@@ -146,13 +144,13 @@ aside {
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
+    overflow-y: auto;
   }
   section {
     width: 100%;
   }
   aside {
     width: 100%;
-    max-height: 25%;
   }
 }
 /*inside editor*/
